--- a/flux/clusters/production/kai/gpu-requirements.yaml
+++ b/flux/clusters/production/kai/gpu-requirements.yaml
@@ -156,7 +156,7 @@ spec:
         cloud.digitalocean.com/gpu-type: "nvidia-h100"
       containers:
       - name: gaussian-splatting
-        image: ${REGISTRY}/gaussian-splatting:latest
+        image: ghcr.io/basilakis/kai/gaussian-splatting:latest
         resources:
           limits:
             nvidia.com/gpu: 1
@@ -176,7 +176,7 @@ spec:
         - name: MAX_BATCH_SIZE
           value: "4"
       - name: text-to-3d
-        image: ${REGISTRY}/text-to-3d:latest
+        image: ghcr.io/basilakis/kai/text-to-3d:latest
         resources:
           limits:
             nvidia.com/gpu: 1
@@ -198,7 +198,7 @@ spec:
         - name: MAX_BATCH_SIZE
           value: "2"
       - name: materialx-processor
-        image: ${REGISTRY}/materialx-processor:latest
+        image: ghcr.io/basilakis/kai/materialx-processor:latest
         resources:
           limits:
             nvidia.com/gpu: 1
