--- a/flux/clusters/production/kai/jobs/dependency-management-job.yaml
+++ b/flux/clusters/production/kai/jobs/dependency-management-job.yaml
@@ -17,7 +17,7 @@ spec:
       restartPolicy: OnFailure
       containers:
       - name: dependency-scanner
-        image: ${REGISTRY}/dependency-scanner:latest
+        image: ghcr.io/basilakis/kai/dependency-scanner:latest
         imagePullPolicy: Always
         resources:
           requests:
@@ -89,7 +89,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: dependency-scanner
-            image: ${REGISTRY}/dependency-scanner:latest
+            image: ghcr.io/basilakis/kai/dependency-scanner:latest
             imagePullPolicy: Always
             resources:
               requests:
