--- a/flux/clusters/production/kai/ml-services/domain-specific-networks-deployment.yaml
+++ b/flux/clusters/production/kai/ml-services/domain-specific-networks-deployment.yaml
@@ -63,7 +63,7 @@ spec:
         - name: REDIS_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: domain-specific-networks-secrets
+              name: kai-unified-secrets
               key: redis_password
         - name: MODEL_CACHE_DIR
           value: "/models/cache"
