--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -14,7 +14,7 @@
     "test:analytics": "jest --testPathPattern=src/components/analytics"
   },
   "dependencies": {
-    "@kai/shared": "0.1.0",
+    "@kai/shared": "*",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
