--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,8 +23,8 @@
     "@aws-sdk/client-ses": "^3.374.0",
     "@aws-sdk/s3-request-presigner": "^3.374.0",
     "@heroui/node": "^1.0.0",
-    "@kai/shared": "0.1.0",
-    "@kai/mcp-client": "1.0.0",
+    "@kai/shared": "*",
+    "@kai/mcp-client": "*",
     "@kubernetes/client-node": "^0.20.0",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^0.27.2",
