--- a/helm-charts/kai/values-staging.yaml
+++ b/helm-charts/kai/values-staging.yaml
@@ -13,38 +13,128 @@ global:
     environment: "staging"
   resourceMultiplier: 1  # Base resources for staging
 
-# Staging-specific component settings
-coordinator:
-  replicaCount: 1
-  minReplicas: 1
-  maxReplicas: 5
-  pdbMinAvailable: 1
-  resources:
-    requests:
-      cpu: "200m"
-      memory: "512Mi"
-    limits:
-      cpu: "1000m"
-      memory: "2Gi"
+# Service configurations for unified template approach
+services:
+  coordinator:
+    enabled: true
+    component: coordinator
+    replicaCount: 1
+    image:
+      repository: ghcr.io/kai/coordinator
+      tag: staging
+    service:
+      enabled: true
+      type: ClusterIP
+      port: 80
+      targetPort: 8080
+    resources:
+      requests:
+        cpu: "200m"
+        memory: "512Mi"
+      limits:
+        cpu: "1000m"
+        memory: "2Gi"
+    autoscaling:
+      enabled: true
+      minReplicas: 1
+      maxReplicas: 5
+      targetCPUUtilizationPercentage: 70
+    healthCheck:
+      enabled: true
+      liveness:
+        path: /health
+        port: 8080
+      readiness:
+        path: /health/ready
+        port: 8080
+    podDisruptionBudget:
+      enabled: true
+      minAvailable: 1
+    configMap:
+      enabled: true
+      data:
+        COORDINATOR_PORT: "8080"
+        COORDINATOR_MODE: "staging"
+    env:
+      - name: NODE_ENV
+        value: "staging"
+      - name: PORT
+        value: "8080"
 
-infrastructure:
-  caching:
-    redis:
-      replicaCount: 1
-      persistence:
-        size: 10Gi
+  api-server:
+    enabled: true
+    component: api
+    replicaCount: 1
+    image:
+      repository: ghcr.io/kai/api-server
+      tag: staging
+    service:
+      enabled: true
+      type: ClusterIP
+      port: 80
+      targetPort: 3000
+    resources:
+      requests:
+        cpu: "200m"
+        memory: "512Mi"
+      limits:
+        cpu: "1000m"
+        memory: "2Gi"
+    autoscaling:
+      enabled: true
+      minReplicas: 1
+      maxReplicas: 5
+      targetCPUUtilizationPercentage: 80
+    healthCheck:
+      enabled: true
+      liveness:
+        path: /api/health
+        port: 3000
+      readiness:
+        path: /api/health/ready
+        port: 3000
+    podDisruptionBudget:
+      enabled: true
+      minAvailable: 1
+    configMap:
+      enabled: true
+      data:
+        API_PORT: "3000"
+        API_VERSION: "v1"
+    env:
+      - name: NODE_ENV
+        value: "staging"
+      - name: PORT
+        value: "3000"
 
-# API Server staging settings (mostly uses defaults)
-api-server:
-  enabled: true
-  replicaCount: 1
-  minReplicas: 1
-  maxReplicas: 5
-  pdbMinAvailable: 1
-  resources:
-    requests:
-      cpu: "200m"
-      memory: "512Mi"
-    limits:
-      cpu: "1000m"
-      memory: "2Gi"
+  infrastructure:
+    enabled: true
+    component: infrastructure
+    replicaCount: 1
+    image:
+      repository: ghcr.io/kai/infrastructure
+      tag: staging
+    service:
+      enabled: true
+      type: ClusterIP
+      port: 80
+      targetPort: 8080
+    resources:
+      requests:
+        cpu: "100m"
+        memory: "256Mi"
+      limits:
+        cpu: "500m"
+        memory: "1Gi"
+    autoscaling:
+      enabled: false
+    healthCheck:
+      enabled: true
+    podDisruptionBudget:
+      enabled: false
+    configMap:
+      enabled: true
+      data:
+        INFRA_MODE: "staging"
+        REDIS_REPLICAS: "1"
+        REDIS_STORAGE_SIZE: "10Gi"
