--- a/helm-charts/kai/values.yaml
+++ b/helm-charts/kai/values.yaml
@@ -1,160 +1,194 @@
 # Default values for Kai Platform Helm chart
 # This is a YAML-formatted file.
+# Restructured to work with unified templates
 
-# Canary deployment configuration
-canary:
-  enabled: false             # Whether this is a canary deployment
-  weight: 10                 # Percentage of traffic to route to canary (1-100)
-  analysis:
-    interval: 30             # Seconds between health checks
-    maxWeight: 50            # Maximum traffic percentage for canary
-    stepWeight: 10           # Percentage to increase on each successful check
-    threshold:
-      success: 95            # Minimum success rate required (percentage)
-      latency: 500           # Maximum acceptable latency (ms)
-  services:
-    - name: "api-server"     # List of critical services to monitor during canary deployment
-      port: 80
-      path: "/health"
-    - name: "coordinator-service"
-      port: 80
-      path: "/health"
-  metrics:
-    prometheus:
-      enabled: true          # Use Prometheus for metrics collection
-      address: "http://prometheus-server.monitoring:9090"
-  autoPromote: true          # Automatically promote canary to production if successful
-  autoRollback: true         # Automatically rollback canary if unhealthy
-
-# Global values shared across all subchart components
+# Global configuration shared across all services
 global:
-  environment: "staging"  # Default environment
-  namespace: "kai-system-staging"
+  namespace: kai-system-staging
+  environment: staging
   registry:
-    url: "ghcr.io"
-    username: ""
-    password: ""
-  repository: "kai"  # GitHub repository name or organization/repository
+    url: ghcr.io
+    organization: kai
   image:
-    tag: "latest"
+    tag: latest
     pullPolicy: IfNotPresent
   imagePullSecrets:
     - name: github-container-registry
   labels:
-    app: "kai-platform"
-    environment: "staging"
-  resourceMultiplier: 1  # Base multiplier for staging environment
-
-# Enable/disable components
-coordinator:
-  enabled: true
-  replicaCount: 1
-  minReplicas: 1
-  maxReplicas: 5
-  pdbMinAvailable: 1
-  resources:
-    requests:
-      cpu: "200m"
-      memory: "512Mi"
-    limits:
-      cpu: "1000m"
-      memory: "2Gi"
-  rbac:
-    create: true
-  service:
-    type: ClusterIP
-    port: 80
-
-infrastructure:
-  enabled: true
-  priorityClasses:
+    app: kai-platform
+    environment: staging
+  # Global security context
+  securityContext:
+    runAsNonRoot: true
+    runAsUser: 1001
+    runAsGroup: 1001
+    fsGroup: 1001
+  # Global health check defaults
+  healthCheck:
     enabled: true
+    liveness:
+      path: /health
+      initialDelaySeconds: 30
+      periodSeconds: 10
+      timeoutSeconds: 5
+      failureThreshold: 3
+    readiness:
+      path: /health/ready
+      initialDelaySeconds: 5
+      periodSeconds: 5
+      timeoutSeconds: 3
+      failureThreshold: 3
+  # Global monitoring settings
   monitoring:
     enabled: true
-  caching:
+    port: 8080
+    path: /metrics
+  # Global ConfigMap settings
+  configMap:
     enabled: true
-    redis:
-      replicaCount: 1
-      persistence:
-        enabled: true
-        size: 10Gi
+    annotations: {}
+    commonData:
+      TIMEZONE: "UTC"
+      LOG_FORMAT: "json"
+      ENVIRONMENT: "staging"
 
-mobile-optimization:
-  enabled: true
-  replicaCount: 1
-  minReplicas: 1
-  maxReplicas: 3
-  pdbMinAvailable: 1
-  resources:
-    requests:
-      cpu: "500m"
-      memory: "1Gi"
-    limits:
-      cpu: "2000m"
-      memory: "4Gi"
+# Canary deployment configuration
+canary:
+  enabled: false
+  weight: 10
+  analysis:
+    interval: 30
+    maxWeight: 50
+    stepWeight: 10
+    threshold:
+      success: 95
+      latency: 500
+  services: []
+  metrics:
+    prometheus:
+      enabled: true
+      address: "http://prometheus-server.monitoring:9090"
+  autoPromote: true
+  autoRollback: true
 
-wasm-compiler:
-  enabled: true
-  replicaCount: 1
-  minReplicas: 1
-  maxReplicas: 3
-  pdbMinAvailable: 1
-  resources:
-    requests:
-      cpu: "500m"
-      memory: "1Gi"
-    limits:
-      cpu: "2000m"
-      memory: "4Gi"
+# Service configurations using unified templates
+# These services are now configured through the unified template approach
+# See values-staging.yaml and values-production.yaml for service-specific configurations
+services: {}
+      limits:
+        cpu: 2000m
+        memory: 4Gi
+      requests:
+        cpu: 500m
+        memory: 1Gi
+    autoscaling:
+      enabled: true
+      minReplicas: 1
+      maxReplicas: 3
+      targetCPUUtilizationPercentage: 70
+    healthCheck:
+      enabled: true
+    podDisruptionBudget:
+      enabled: true
+      minAvailable: 1
+    configMap:
+      enabled: true
+      data:
+        MOBILE_OPT_MODE: "staging"
 
+  wasm-compiler:
+    enabled: true
+    component: wasm-compiler
+    replicaCount: 1
+    image:
+      repository: ghcr.io/kai/wasm-compiler
+      tag: latest
+    service:
+      enabled: true
+      type: ClusterIP
+      port: 80
+      targetPort: 8080
+    resources:
+      limits:
+        cpu: 2000m
+        memory: 4Gi
+      requests:
+        cpu: 500m
+        memory: 1Gi
+    autoscaling:
+      enabled: true
+      minReplicas: 1
+      maxReplicas: 3
+      targetCPUUtilizationPercentage: 70
+    healthCheck:
+      enabled: true
+    podDisruptionBudget:
+      enabled: true
+      minAvailable: 1
+    configMap:
+      enabled: true
+      data:
+        WASM_COMPILER_MODE: "staging"
+
+  monitoring:
+    enabled: true
+    component: monitoring
+    replicaCount: 1
+    image:
+      repository: ghcr.io/kai/monitoring
+      tag: latest
+    service:
+      enabled: true
+      type: ClusterIP
+      port: 9090
+      targetPort: 9090
+    resources:
+      limits:
+        cpu: 500m
+        memory: 1Gi
+      requests:
+        cpu: 250m
+        memory: 512Mi
+    autoscaling:
+      enabled: false
+    healthCheck:
+      enabled: true
+      liveness:
+        path: /-/healthy
+        port: 9090
+      readiness:
+        path: /-/ready
+        port: 9090
+    podDisruptionBudget:
+      enabled: false
+    configMap:
+      enabled: true
+      data:
+        PROMETHEUS_PORT: "9090"
+    health:
+      enabled: true
+      endpoints:
+        - name: "api-server"
+          path: "/health"
+          port: 80
+          initialDelaySeconds: 30
+          periodSeconds: 15
+          failureThreshold: 3
+        - name: "coordinator-service"
+          path: "/health"
+          port: 80
+          initialDelaySeconds: 30
+          periodSeconds: 15
+          failureThreshold: 3
+
+# Workflow configuration
 workflows:
   enabled: true
   templates:
     reconstruction:
       enabled: true
 
-# API Server configuration
-api-server:
-  enabled: true
-  replicaCount: 1
-  minReplicas: 1
-  maxReplicas: 5
-  pdbMinAvailable: 1
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
-  resources:
-    requests:
-      cpu: "200m"
-      memory: "512Mi"
-    limits:
-      cpu: "1000m"
-      memory: "2Gi"
-  service:
-    type: ClusterIP
-    port: 80
-
 # Backup configuration
 backup:
   enabled: true
-  retentionCount: 5  # Keep 5 most recent backups
-
-# Health monitoring configuration
-monitoring:
-  health:
-    enabled: true
-    endpoints:
-      - name: "api-server"
-        path: "/health"
-        port: 80
-        initialDelaySeconds: 30
-        periodSeconds: 15
-        failureThreshold: 3
-      - name: "coordinator-service"
-        path: "/health"
-        port: 80
-        initialDelaySeconds: 30
-        periodSeconds: 15
-        failureThreshold: 3
+  retentionCount: 5
