--- a/packages/agents/package.json
+++ b/packages/agents/package.json
@@ -18,15 +18,15 @@
   "dependencies": {
     "@langchain/anthropic": "^0.1.1",
     "axios": "^1.6.0",
-    "crewai": "^1.7.0",
-    "crewai-tools": "^1.0.0",
+    "crewai": "0.102.0",
+    "crewai-tools": "0.17.0",
     "dotenv": "^16.3.1",
     "langchain": "^0.1.0",
     "python-shell": "^5.0.0",
     "redis": "^4.6.0",
     "three": "^0.160.0",
     "winston": "^3.10.0",
-    "@kai/shared": "workspace:*",
+    "@kai/shared": "*",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
