--- a/packages/coordinator/package.json
+++ b/packages/coordinator/package.json
@@ -14,7 +14,7 @@
     "@kubernetes/client-node": "^0.18.1",
     "ioredis": "^5.3.2",
     "winston": "^3.10.0",
-    "@kai/shared": "workspace:*",
+    "@kai/shared": "*",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "helmet": "^7.0.0",
