--- a/packages/mcp-client/package.json
+++ b/packages/mcp-client/package.json
@@ -12,7 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@kai/shared": "0.1.0",
+    "@kai/shared": "*",
     "axios": "^0.27.2",
     "form-data": "^4.0.0"
   },
